# fortune-data

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-DATA  Makefile  NOTICE  README.md  pyproject.toml  tasks.jsonl
cookies/zh/: README.md
docs/: README_zh.md
scripts/: Makefile  README.md  compile.py  import-zh.py  main.py  model.py  pyproject.toml  tasks.jsonl  utils.py
scripts/common/: __init__.py  agent.py  model.py
scripts/crawler/: gushiwen.py
scripts/extract/: __init__.py  crawler.py  extractor.py  fortune_mod.py  gushiwen.py  wikiquote.py  xinhua.py
scripts/extract/test/: wikiquote_test.py
scripts/load/: __init__.py  cookiedb.py  jsonl.py  loader.py
scripts/transform/: __init__.py  filter.py  opencc.py  scorer.py  transformer.py
